app/assets/stylesheets/bugs.css
.exploit_attach_success{
    color:LimeGreen !important;
    background:none !important;
}
.exploit_attach_missing{
    color:red !important;
    background:none !important;
}
button.back_btn {
    background-color: #80a9ba;
    border-color: #80a9ba;
    cursor: pointer;
}
.searchID{
    width:100%;
    margin-bottom: 10px;
}
.rule_state_col div {
    display: inline-block;
}

/*.rule_state_red{*/
table#bug-rules-table tr.incomplete-unparsed td.rule_state_col::before {
    width: 10px;
    height: 10px;
    border-radius: 5px;
    content: '';
    display: inline-block;
    margin-right: 6px;
    background-color: #ff5500;
}
table#bug-rules-table tr.deleted-rule td.rule_state_col::before {
    width: 10px;
    height: 10px;
    border-radius: 5px;
    content: '';
    display: inline-block;
    margin-right: 6px;
    background-color: #fff;
}
table#bug-rules-table tr.parsed.stale-edit td.rule_state_col::before {
    width: 10px;
    height: 10px;
    border-radius: 5px;
    content: '';
    display: inline-block;
    margin-right: 6px;
    background-color: #bbbbbb;
}
div.progress{
    background-color: #80a9ba;
    width:100%;
    margin-bottom: 0;
    margin-right:100px;
}
.progress_group{
    display:none;
}

.bug-details-columns {
    padding: 5px;
}

#bug-rules-table .rule-test-alert {
    display: none;
}
#bug-rules-table .alerted {
    background-color: #a1f9c0;
}
#bug-rules-table .no_alert{
    background-color: #ff8080;
}

.edit-summary-field {
    margin-top: 20px;
}

.glyphicon-refresh-animate {
    -animation: spin .7s infinite linear;
    -webkit-animation: spin2 .7s infinite linear;
}

#bugs_filter > li > a > .glyphicon-ok{
    visibility:hidden;
}
#bugs_filter > li > a.selected > .glyphicon-ok{
    visibility:visible;
}

@-webkit-keyframes spin2 {
    from { -webkit-transform: rotate(0deg);}
    to { -webkit-transform: rotate(360deg);}
}

@keyframes spin {
    from { transform: scale(1) rotate(0deg);}
    to { transform: scale(1) rotate(360deg);}
}

.apple_pagination {
    text-align: center;
    cursor: default; }
.apple_pagination a, .apple_pagination span {
    padding: 0.2em 0.3em; }
.apple_pagination .disabled {
    color: #aaaaaa; }
.apple_pagination .current {
    font-style: normal;
    font-weight: bold;
    background-color: #bebebe;
    display: inline-block;
    width: 1.4em;
    height: 1.4em;
    line-height: 1.5;
    -moz-border-radius: 1em;
    -webkit-border-radius: 1em;
    border-radius: 1em;
    text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px; }
.apple_pagination a {
    text-decoration: none;
    color: black; }
.apple_pagination a:hover, .apple_pagination a:focus {
    text-decoration: underline; }

.modal-header {
    padding:0;
    border-bottom:1px solid #eee;
    background-color: #f2f2f2;
    -webkit-border-top-left-radius: 5px;
    -webkit-border-top-right-radius: 5px;
    -moz-border-radius-topleft: 5px;
    -moz-border-radius-topright: 5px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

.bugs-split-color {
    background-color: #f2f6f6;
}

.bugs-split-colors-tweak {
    padding-left: 25px;
    margin-left: -25px;
}


.icon-docs {
    max-width: 20px;
    height: auto;
}

/*** Overriding styles that cause wonky layout ***/
#search-bugs-form .form-group {
    margin-left: 0;
    margin-right: 0;
}

.modal-body .row {
    margin-right: -15px !important; /* overrides custom to return to standard bootstrap structure */
}

#search-bugs-form .form-inline .form-control {
    width: 100%;
}

.nested-col {
    padding: 0 !important;
}

.pad-left-override {
    padding-left: 0 !important;
}

